bug fixed
1. index page label color and alignment
2. copyright display outside the footer
3. remove the scrollbar of clue div

--- a/app/css/game.css
+++ b/app/css/game.css
@@ -516,7 +516,7 @@
     max-width: 45%;
     max-height: 500px;
     margin-left: 40px;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 .clueText{
